# nonebot-plugin-paper

./: .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: release.yml
docs/: index.md  modules.md
nonebot_plugin_paper/: __init__.py  command.py  config.py  utils.py
nonebot_plugin_paper/jinja_temple/: paper.jinja2
nonebot_plugin_paper/libs/: arxiv.py  skia_render.py
nonebot_plugin_paper/libs/render/: __init__.py  dependency_manager.py  html_render.py  pillow_render.py
